# memory-os

./: .env.example  .gitignore  AGENTS.md  README.md  example.py  pyproject.toml  requirements.txt  timememorytest.md  待修改.txt
evaluation/: build_time_memory_strict_datasets.py  run_preference_eval.py  run_short_term_eval.py  run_time_memory_eval.py  run_time_memory_judge_calibration.py  time_memory_judge.py
evaluation/datasets/: preference_memory_probe.jsonl  short_term_memory_probe.jsonl  short_term_memory_probe_10_20.jsonl  short_term_memory_probe_2_10.jsonl  time_memory_judge_calibration.jsonl  time_memory_probe.jsonl
memory/: __init__.py  config.py  manager.py  migrate.py  preferences.py  redis_memory.py  rules.py  sqlite_event.py  summarizer.py  time_memory.py  utils.py
tests/: test_memory.py  test_short_term_eval.py  test_time_memory_eval.py
ui/: README.md  __init__.py  app.py  llm.py  requirements.txt  router.py
ui/static/: index.html
